--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sharp": "^2.5.4",
     "gatsby-plugin-ts-loader": "^0.1.0",
     "gatsby-plugin-typescript": "^2.3.1",
+    "gatsby-source-contentful": "^2.2.9",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-sharp": "^2.4.4",
     "gsap": "^3.2.6",
@@ -27,6 +28,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.20",
+    "react-router-dom": "^5.1.2",
     "smooth-scrollbar": "^8.5.2",
     "webpack": "^4.42.1"
   },
