--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-env": "^2.4.1",
     "gatsby": "^2.20.20",
     "gatsby-image": "^2.3.2",
+    "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-react-helmet": "^3.2.2",
