--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "gatsby-image": "^2.3.2",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^2.3.3",
+    "gatsby-plugin-meta-redirect": "^1.1.1",
+    "gatsby-plugin-netlify": "^2.2.3",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-react-helmet": "^3.2.2",
     "gatsby-plugin-react-next": "^1.0.11",
