--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/runtime": "^7.9.2",
     "babel": "^6.23.0",
     "babel-env": "^2.4.1",
+    "babel-preset-gatsby-package": "^0.3.1",
     "gatsby": "^2.20.20",
     "gatsby-image": "^2.3.2",
     "gatsby-plugin-intl": "^0.3.3",
@@ -36,6 +37,7 @@
     "webpack": "^4.42.1"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.9.4",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
