--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-preset-gatsby": "^0.3.1",
     "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
     "prettier": "^1.19.1",
