--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "version": "0.1.0",
   "author": "Kurcz Loci <dol.bt@chello.hu>",
   "dependencies": {
+    "@babel/runtime": "^7.9.2",
+    "babel": "^6.23.0",
+    "babel-env": "^2.4.1",
+    "babel-preset-gatsby-package": "^0.3.1",
     "gatsby": "^2.20.20",
     "gatsby-image": "^2.3.2",
     "gatsby-plugin-intl": "^0.3.3",
@@ -29,23 +33,28 @@
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.20",
     "react-router-dom": "^5.1.2",
-    "smooth-scrollbar": "^8.5.2",
-    "webpack": "^4.42.1"
+    "smooth-scrollbar": "^8.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.1.0",
     "babel-preset-gatsby": "^0.3.1",
     "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
     "prettier": "^1.19.1",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "keywords": [
     "gatsby"
