--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@typescript-eslint/parser": "^2.28.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-preset-gatsby": "^0.3.1",
     "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
