babel-cli added

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "version": "0.1.0",
   "author": "Kurcz Loci <dol.bt@chello.hu>",
   "dependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/runtime": "^7.9.2",
-    "babel": "^6.23.0",
-    "babel-env": "^2.4.1",
+    "@babel/preset-env": "^7.9.5",
     "gatsby": "^2.20.20",
     "gatsby-image": "^2.3.2",
     "gatsby-plugin-intl": "^0.3.3",
@@ -39,6 +39,7 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "@babel/preset-stage-0": "^7.8.3",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
