--- a/package.json
+++ b/package.json
@@ -7,26 +7,30 @@
   "dependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/runtime": "^7.9.2",
     "@babel/preset-env": "^7.9.5",
+    "@babel/runtime": "^7.9.2",
+    "@contentful/rich-text-react-renderer": "^13.4.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "gatsby": "^2.20.20",
     "gatsby-image": "^2.3.2",
+    "gatsby-plugin-google-tagmanager": "^2.3.4",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-meta-redirect": "^1.1.1",
     "gatsby-plugin-netlify": "^2.2.3",
     "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.2.2",
+    "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-sharp": "^2.5.4",
     "gatsby-plugin-ts-loader": "^0.1.0",
     "gatsby-plugin-typescript": "^2.3.1",
-    "gatsby-source-contentful": "^2.2.9",
+    "gatsby-source-contentful": "^2.3.12",
     "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-source-instagram": "^0.7.0",
     "gatsby-transformer-sharp": "^2.4.4",
     "gsap": "^3.2.6",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
