--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.20",
     "react-router-dom": "^5.1.2",
-    "smooth-scrollbar": "^8.5.2"
+    "smooth-scrollbar": "^8.5.2",
+    "videojs-youtube": "^2.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
