--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/runtime": "^7.9.2",
     "@contentful/rich-text-react-renderer": "^13.4.0",
+    "@vimeo/player": "^2.12.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "gatsby": "^2.20.20",
     "gatsby-image": "^2.3.2",
