--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.20",
+    "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.1.2",
+    "react-youtube": "^7.11.2",
     "smooth-scrollbar": "^8.5.2",
     "videojs-youtube": "^2.6.1"
   },
