--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/runtime": "^7.9.2",
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@vimeo/player": "^2.12.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "gatsby": "^2.20.20",
     "gatsby-image": "^2.3.2",
@@ -24,6 +25,7 @@
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-sharp": "^2.5.4",
+    "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-ts-loader": "^0.1.0",
     "gatsby-plugin-typescript": "^2.3.1",
     "gatsby-source-contentful": "^2.3.12",
@@ -41,6 +43,7 @@
     "react-router-dom": "^5.1.2",
     "react-youtube": "^7.11.2",
     "smooth-scrollbar": "^8.5.2",
+    "styled-components": "^5.1.1",
     "videojs-youtube": "^2.6.1"
   },
   "devDependencies": {
