--- a/package.json
+++ b/package.json
@@ -5,71 +5,70 @@
   "version": "0.1.0",
   "author": "Kurcz Loci <dol.bt@chello.hu>",
   "dependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/runtime": "^7.9.2",
+    "@babel/cli": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/runtime": "^7.12.5",
     "@contentful/rich-text-react-renderer": "^13.4.0",
-    "@vimeo/player": "^2.12.0",
-    "babel-plugin-styled-components": "^1.10.7",
+    "@vimeo/player": "^2.14.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "gatsby": "^2.20.20",
-    "gatsby-image": "^2.3.2",
-    "gatsby-plugin-google-tagmanager": "^2.3.4",
+    "gatsby": "^2.29.2",
+    "gatsby-image": "^2.8.0",
+    "gatsby-plugin-google-tagmanager": "^2.8.0",
     "gatsby-plugin-intl": "^0.3.3",
-    "gatsby-plugin-manifest": "^2.3.3",
+    "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-meta-redirect": "^1.1.1",
-    "gatsby-plugin-netlify": "^2.2.3",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.3.2",
+    "gatsby-plugin-netlify": "^2.8.0",
+    "gatsby-plugin-offline": "^3.7.1",
+    "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-plugin-sass": "^2.2.1",
-    "gatsby-plugin-sharp": "^2.5.4",
-    "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-plugin-sass": "^2.8.0",
+    "gatsby-plugin-sharp": "^2.11.2",
+    "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-plugin-ts-loader": "^0.1.0",
-    "gatsby-plugin-typescript": "^2.3.1",
-    "gatsby-source-contentful": "^2.3.12",
-    "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-source-instagram": "^0.8.0-beta.0",
-    "gatsby-transformer-sharp": "^2.4.4",
-    "gsap": "^3.2.6",
+    "gatsby-plugin-typescript": "^2.9.0",
+    "gatsby-source-contentful": "^2.3.56",
+    "gatsby-source-filesystem": "^2.8.1",
+    "gatsby-source-instagram": "^0.8.0",
+    "gatsby-transformer-sharp": "^2.9.0",
+    "gsap": "^3.5.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
-    "react-hot-loader": "^4.12.20",
+    "react-hot-loader": "^4.13.0",
     "react-loader-spinner": "^3.1.14",
-    "react-router-dom": "^5.1.2",
-    "react-youtube": "^7.11.2",
-    "smooth-scrollbar": "^8.5.2",
-    "styled-components": "^5.1.1",
+    "react-router-dom": "^5.2.0",
+    "react-youtube": "^7.13.0",
+    "smooth-scrollbar": "^8.5.3",
+    "styled-components": "^5.2.1",
     "videojs-youtube": "^2.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "@babel/preset-stage-0": "^7.8.3",
-    "@types/node": "^13.11.1",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.0",
+    "@types/node": "^13.13.36",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
-    "babel-preset-gatsby": "^0.3.1",
-    "babel-preset-gatsby-package": "^0.3.1",
-    "css-loader": "^3.5.2",
+    "babel-preset-gatsby": "^0.3.6",
+    "babel-preset-gatsby-package": "^0.3.2",
+    "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
     "prettier": "^1.19.1",
-    "style-loader": "^1.1.3",
+    "style-loader": "^1.3.0",
     "ts-loader": "^6.2.2",
-    "typescript": "^3.8.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "keywords": [
     "gatsby"
