--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-meta-redirect": "^1.1.1",
     "gatsby-plugin-netlify": "^2.8.0",
     "gatsby-plugin-offline": "^3.7.1",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sass": "^2.8.0",
